# top-doggo

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  askama.toml  docker-compose-prod-b8400w0.yml  docker-compose-prod-basic.yml  docker-compose-prod-k0gggkw.yml  docker-compose-prod-yk4g4gk.yml  docker-compose.yml  flake.nix  justfile  package-lock.json  package.json  tailwind.config.cjs  todos.db
assets/: input.css  output.css
migrations/: 20240609203451_init.sql  20240624020125_user_tables.sql  20240713013922_doggo_tables.sql  20240713230346_user_finished_with_dog.sql  20240714031826_rating_value.sql  20240719020451_user_timestamps.sql  20240719032431_session_timestamps.sql  20240719032754_dog_timestamps.sql  20240719032912_match_timestamps.sql  20240719033057_rating_timestamps.sql  20240719033234_user_finished_with_dog_timestamps.sql  20240719224251_match_elo_changes.sql  20240720193951_log_table.sql  20240721030120_dog_approved_column.sql  20240723185308_use_simple_timestamp.sql  20240723185309_total_xp.sql  20240723185310_email_token.sql  20240723185311_email_token_sender_and_used.sql
src/: auth.rs  layout.rs  main.rs  main1.rs  main2.rs  routers.rs
src/routers/: contacts.rs  count.rs  foo.rs  hello.rs  mod.rs  todo.rs
src/routers/doggo/: elo.rs  mod.rs  name_dog.rs  xp.rs
src/routers/home/: mod.rs
src/routers/leaderboard/: mod.rs
src/routers/me/: mod.rs
src/routers/test/: mod.rs
src/routers/todo/: create.rs  create_task.rs  delete.rs  delete_task.rs  mod.rs  read.rs  read_tasks.rs  update.rs  update_task.rs
src/routers/upload/: mod.rs
templates/: base.html  hello.html  index.html  plus1.html
templates/contacts/: contact.html  contacts_list.html  create-contact-form.html  form.html  index.html  page.html  spinner.html
templates/count/: form.html  page.html
templates/counter/: count.html
templates/deprecated/contacts/: contact.html  create-contact-form.html  index.html
templates/foo/: cool-title.html  page.html
templates/hello/: page.html
templates/todo/: page.html  task.html  tasks.html
