[package]
name = "best-doggo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
askama = { version = "0.12.1", features = ["with-axum", "serde", "markdown"] }
askama_axum = "0.4.0"
tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"] }
    # ipnetwork feature is a thing
dotenv = "0.15.0"
# chrono and chrono-tz for timestamps (also sqlx has a chrono feature flag)
    # https://youtu.be/TCERYbgvbq0?si=ivjia9CxQXD2PdLv&t=499

