[package]
name = "top-doggo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["macros", "multipart"]}
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tower-http = { version = "0.4.1", features = ["fs", "trace", "normalize-path", "limit"] }
tower-layer = "0.3.2"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite"] }
    # ipnetwork feature is a thing
    # chrono feature flag is a thing https://youtu.be/TCERYbgvbq0?si=ivjia9CxQXD2PdLv&t=499
dotenv = "0.15.0"
maud = { version = "0.26.0", features = ["axum"] }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
serde_json = "1.0.120"
# axum-client-ip = "0.6.0"
axum-client-ip = "0.4.1"
# sqlx-cli = "0.7.4"
# tower-cookies = "0.9.0"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# tower = { version = "0.4", features = ["util"] }
